# ijkplayer-android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init-android-libyuv.sh  init-android-openssl.sh  init-android-soundtouch.sh  init-android.sh
android/contrib/: CMakeLists.txt  compile-ffmpeg.sh  compile-openssl.sh
android/contrib/tools/: do-compile-ffmpeg.sh  do-compile-openssl.sh  do-detect-env.sh
android/ijkplayer/: build.gradle  settings.gradle
android/ijkplayer/ExoPlayer/: build.gradle
android/ijkplayer/gradle/wrapper/: gradle-wrapper.properties
android/ijkplayer/ijkplayer-arm64/: build.gradle
android/ijkplayer/ijkplayer-example/: build.gradle
android/ijkplayer/ijkplayer-example/src/main/: AndroidManifest.xml
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java  RecentMediaActivity.java  SampleMediaActivity.java  VideoActivity.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/application/: AppActivity.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/content/: PathCursorLoader.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/fragments/: RecentMediaListFragment.java  SampleMediaListFragment.java  TracksFragment.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/media/: AndroidMediaController.java  IRenderView.java  IjkVideoView.java  MeasureHelper.java  SurfaceRenderView.java  TableLayoutBinder.java  TextureRenderView.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/preference/: IjkListPreference.java
android/ijkplayer/ijkplayer-example/src/main/res/values/: styles.xml
android/ijkplayer/ijkplayer-exo/: build.gradle
android/ijkplayer/ijkplayer-java/: build.gradle
android/ijkplayer/ijkplayer-java/src/main/: AndroidManifest.xml
android/ijkplayer/ijkplayer-java/src/main/cpp/: CMakeLists.txt
android/ijkplayer/ijkplayer-java/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaMeta.java  IjkMediaPlayer.java
cmake/ijkmedia/: CMakeLists.txt
cmake/ijkmedia/ijkffmpeg/: CMakeLists.txt
cmake/ijkmedia/ijkj4a/: CMakeLists.txt
cmake/ijkmedia/ijkplayer/: CMakeLists.txt
cmake/ijkmedia/ijksdl/: CMakeLists.txt
cmake/ijkmedia/ijksoundtouch/: CMakeLists.txt
cmake/ijkmedia/ijkyuv/: CMakeLists.txt
config/: module-lite.sh  module.sh
ijkmedia/: CMakeLists.txt
ijkmedia/ijkj4a/: CMakeLists.txt
ijkmedia/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/: IjkMediaPlayer.c
ijkmedia/ijkplayer/: ff_cmdutils.c  ff_ffpipenode.c  ff_ffpipenode.h  ff_ffplay.c  ff_ffplay_def.h  ijkmeta.c  ijkmeta.h  ijkplayer.c
ijkmedia/ijkplayer/android/: ffmpeg_api_jni.c  ijkplayer_android.c  ijkplayer_jni.c
ijkmedia/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipenode_android_mediacodec_vdec.c
ijkmedia/ijkplayer/ijkavformat/: allformats.c  ijkasync.c  ijkiocache.c  ijkiourlhook.c  ijklas.c  ijklivehook.c  ijksegment.c  ijkurlhook.c
ijkmedia/ijkplayer/ijkavutil/: ijkdict.c  ijkdict.h
ijkmedia/ijkplayer/pipeline/: ffpipenode_ffplay_vdec.c
ijkmedia/ijksdl/: CMakeLists.txt  ijksdl_aout.h  ijksdl_egl.c  ijksdl_fourcc.h  ijksdl_mutex.c  ijksdl_vout.c  ijksdl_vout.h
ijkmedia/ijksdl/android/: android_audiotrack.c  android_nativewindow.c  ijksdl_android_jni.c  ijksdl_aout_android_audiotrack.c  ijksdl_aout_android_opensles.c  ijksdl_vout_android_nativewindow.c  ijksdl_vout_android_surface.c
ijkmedia/ijksdl/ffmpeg/: ijksdl_vout_overlay_ffmpeg.c
ijkmedia/ijksdl/ffmpeg/abi_all/: image_convert.c
