cmake_minimum_required(VERSION 3.4.1)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ijkj4a)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ijkplayer)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ijksdl)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ijkyuv)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ijksoundtouch)



